# OOP-Course-FMI-2023

./: README.md
exam/Task1/: EventDuringJanuary2023.cpp  EventDuringJanuary2023.h
exam/Task2/: ModifiableNaturalNumbersFunction.cpp  ModifiableNaturalNumbersFunction.h  NaturalNumbersFunction.cpp  NaturalNumbersFunction.h
homework1/: Column.cpp  Column.h  Row.h  TableParser.cpp  TableParser.h
homework1.2/: DateTime.cpp  DateTime.h  File.cpp  File.h  TextFilesManager.cpp  TextFilesManager.h  Time.cpp  constants.h  main.cpp  utils.cpp
homework1/task1/: CMakeLists.txt  Column.cpp  Row.cpp  TableParser.cpp  constants.h  main.cpp
homework1/task2/: CMakeLists.txt  Date.cpp  Date.h  File.cpp  TextFilesManager.cpp  TextFilesManager.h  Time.h  utils.cpp  utils.h
homework2/task1/: CMakeLists.txt  main.cpp  main1.cpp  test1.cpp
homework2/task1/ChatGPTString/: ChatGPTString.h
homework2/task1/MyString/: MyString.cpp  MyString.h  MyStringDOC.txt
homework2/task1/MyStringSSO/: MyStringSSO.cpp  MyStringSSO.h
homework2/task2/: CMakeLists.txt  main.cpp
homework2/task2/MyString/: MyString.cpp  MyString.h
homework2/task2/StringCreaterPieceByPiece/: StringCreaterPieceByPiece.cpp  StringCreaterPieceByPiece.h
homework2/task2/StringPiece/: StringPiece.cpp  StringPiece.h
homework2/task2/util_functions/: util_functions.cpp  util_functions.h
homework3/task1/: CMakeLists.txt  main.cpp
homework3/task1.2/: CMakeLists.txt  main.cpp
homework3/task1.2/BaseCriteria/: BaseCriteria.cpp  BaseCriteria.h
homework3/task1.2/NoDivisionCriteria/: NoDivisionCriteria.cpp  NoDivisionCriteria.h
homework3/task1.2/ProgramManager/: ProgramManager.cpp  ProgramManager.h
homework3/task1.2/SetBase/: SetBase.cpp  SetBase.h
homework3/task1.2/SetByCriteria/: SetByCriteria.cpp  SetByCriteria.h
homework3/task1.2/SetIntersection/: SetIntersection.cpp  SetIntersection.h
homework3/task1.2/SetUnion/: SetUnion.cpp  SetUnion.h
homework3/task1.2/SharedPointer/: SharedPointer.hpp
homework3/task1.2/SingleDivisionCriteria/: SingleDivisionCriteria.cpp  SingleDivisionCriteria.h
homework3/task1.2/Vector/: Vector.hpp
homework3/task1/ProgramController/: ProgramController.cpp  ProgramController.h
homework3/task1/SetBase/: SetBase.cpp  SetBase.h
homework3/task1/SetByCriteria/: SetByCriteria.cpp  SetByCriteria.h
homework3/task1/SetByNoDivision/: SetByNoDivision.cpp  SetByNoDivision.h
homework3/task1/SetByRange/: SetByRange.cpp  SetByRange.h
homework3/task1/SetBySingleDivision/: SetBySingleDivision.cpp  SetBySingleDivision.h
homework3/task1/SetIntersection/: SetIntersection.cpp  SetIntersection.h
homework3/task1/SetUnion/: SetUnion.cpp  SetUnion.h
homework3/task1/UniquePointer/: UniquePointer.hpp
homework3/task2/: CMakeLists.txt  main.cpp
homework3/task3/: CMakeLists.txt  main.cpp
lecture_examples/lectrue14/: CMakeLists.txt  example10.cpp  example13.cpp  example3.cpp  example4.cpp  example8.cpp
lecture_examples/lecture01/: CMakeLists.txt  exercise_1.cpp  gcdExample.txt  main.cpp  memoryAllocation.cpp  selectionSort.txt  union.cpp
lecture_examples/lecture02/: CMakeLists.txt  exercise_1.cpp  exercise_2.cpp
lecture_examples/lecture03/: replaceCharInFile.cpp
lecture_examples/lecture08/: CMakeLists.txt
lecture_examples/lecture08/Locality/: Locality.cpp
lecture_examples/lecture08/MyString/: MyString.cpp  MyString.h
lecture_examples/lecture08/Vector/: Vector.cpp
lecture_examples/lecture10/: CMakeLists.txt  InheritanceBig4.cpp  InheritanceChain.cpp  PassingToFunctions.cpp  TypesOfInheritance.cpp  main.cpp
lecture_examples/lecture10/exe1/AlcoholDrink/: AlcoholDrink.cpp  AlcoholDrink.h
lecture_examples/lecture10/exe1/AlcoholDrinkVector/: AlcoholDrinkVector.cpp  AlcoholDrinkVector.h
lecture_examples/lecture10/exe1/Bar/: Bar.cpp  Bar.h
lecture_examples/lecture10/exe1/Drink/: Drink.cpp  Drink.h
lecture_examples/lecture10/exe1/DrinkVector/: DrinkVector.cpp  DrinkVector.h
lecture_examples/lecture10/exe2/SetByCriteria/: SetByCriteria.cpp  SetByCriteria.h
lecture_examples/lecture10/exe2/SetOfNumbers/: SetOfNumbers.cpp
lecture_examples/lecture13/: CMakeLists.txt  MultipleInheritanceExample.hpp  MultipleInheritanceExample2.cpp  TemplateClassSpecification.hpp  TemplateFunctionSpecification.hpp  main.cpp  swap.hpp
lecture_examples/lecture13/Optional/: Optional.hpp
lecture_examples/lecture13/SharedAndWeakPointer/: SharedPointer.hpp  WeakPointer.hpp
lecture_examples/lecture9/: CMakeLists.txt  CompositionMoveSemantics.cpp  main.cpp
lecture_examples/lecture9/UniqueElementPointer/: UniqueElementPointer.h
lecture_examples/lecture9/Vector(with move)/: Vector.cpp  Vector.h
oop_prac/prac10/: CMakeLists.txt
oop_prac/prac10/Car/: Car.cpp  Car.h
oop_prac/prac10/CarBattery/: CarBattery.cpp  CarBattery.h
oop_prac/prac10/CarPart/: CarPart.cpp  CarPart.h
oop_prac/prac10/Engine/: Engine.cpp  Engine.h
oop_prac/prac10/FuelTank/: FuelTank.cpp  FuelTank.h
oop_prac/prac10/Tyre/: Tyre.cpp  Tyre.h
oop_prac/prac11/: main.cpp  (+1 more)
oop_prac/prac12/: CMakeLists.txt
oop_prac/prac12/CheckBox/: CheckBox.cpp  CheckBox.h
oop_prac/prac12/Controller/: Controller.cpp  Controller.h
oop_prac/prac12/ControllerCollection/: ControllerCollection.cpp  ControllerCollection.h
oop_prac/prac12/Form/: Form.cpp  Form.h
oop_prac/prac12/Label/: Label.cpp  Label.h
oop_prac/prac12/RadioButton/: RadioButton.cpp  RadioButton.h
oop_prac/prac13/: CMakeLists.txt
oop_prac/prac13/task1/: Source.cpp  sortArray.hpp
oop_prac/prac13/task2/: Optional.hpp  PairOfOptionals.hpp
oop_prac/prac13/task5/: FixedLengthStack.hpp
oop_prac/prac14/: CMakeLists.txt  main.cpp
oop_prac/prac14/BinaryExpression/: BinaryExpression.cpp  BinaryExpression.h
oop_prac/prac14/BooleanExpression/: BooleanExpression.h
oop_prac/prac14/BooleanInterpretation/: BooleanInterpretation.cpp  BooleanInterpretation.h
oop_prac/prac14/ExpressionCalculator/: ExpressionCalculator.cpp  ExpressionCalculator.h
oop_prac/prac14/UnitaryExpression/: UnitaryExpression.cpp  UnitaryExpression.h
oop_prac/prac14/Variable/: Variable.cpp
(+139 files in other folders)
