cmake_minimum_required(VERSION 3.23)
project(task1)

set(CMAKE_CXX_STANDARD 14)

add_executable(task1
        main.cpp
        MyString/MyString.h MyString/MyString.cpp
#        SSO/SSO.h SSO/SSO.cpp
#        SSO2/SSO2.h SSO2/SSO2.cpp
#        ChatGPTString/ChatGPTString.h ChatGPTString/ChatGPTString.cpp
#        main1.cpp
#        MyStringSSO/MyStringSSO.h MyStringSSO/MyStringSSO.cpp
        )
