cmake_minimum_required(VERSION 3.25)
project(lectrue14)

set(CMAKE_CXX_STANDARD 17)

add_executable(lectrue14
        main.cpp

        example2.cpp
        example3.cpp
        example4.cpp


        example7.cpp
        example8.cpp

        example10.cpp
        example11.cpp
        example12.cpp
        )
