cmake_minimum_required(VERSION 3.23)
project(lecture8)

set(CMAKE_CXX_STANDARD 14)

add_executable(lecture8
        main.cpp
#        MyString/MyString.h MyString/MyString.cpp
#        RuleOfFourComposition/RuleOfFourComposition.cpp
#        Locality/Locality.cpp
        Vector/Vector.h Vector/Vector.cpp
        )
