cmake_minimum_required(VERSION 3.25)
project(lecture10)

set(CMAKE_CXX_STANDARD 17)

add_executable(lecture10
#        main.cpp
#        exe1/MyString/MyString.h exe1/MyString/MyString.cpp
#        exe1/Bar/Bar.h exe1/Bar/Bar.cpp
#        exe1/Drink/Drink.h exe1/Drink/Drink.cpp
#        exe1/AlcoholDrink/AlcoholDrink.h exe1/AlcoholDrink/AlcoholDrink.cpp

#        exe1/DrinkVector/DrinkVector.h exe1/DrinkVector/DrinkVector.cpp
#        exe1/AlcoholDrinkVector/AlcoholDrinkVector.h exe1/AlcoholDrinkVector/AlcoholDrinkVector.cpp

#        exe2/SetOfNumbers/SetOfNumbers.h exe2/SetOfNumbers/SetOfNumbers.cpp
#        exe2/SetByCriteria/SetByCriteria.h exe2/SetByCriteria/SetByCriteria.cpp

#        InheritanceBig4.cpp
#        InheritanceChain.cpp
        PassingToFunctions.cpp
        )
