cmake_minimum_required(VERSION 3.25)
project(lecture13)

set(CMAKE_CXX_STANDARD 17)

add_executable(lecture13
        main.cpp
#        TemplateFunctionSpecification.hpp
#        TemplateClassSpecification.hpp

#        MultipleInheritanceExample.hpp
#        swap.hpp

#        MultipleInheritanceExample2.cpp

        TemplateFunctionSpecification.hpp
        )
