cmake_minimum_required(VERSION 3.25)
project(prac13)

set(CMAKE_CXX_STANDARD 17)

add_executable(prac13
#        task1/Source.cpp
#        task1/sortArray.hpp

#        task2/Optional.hpp
#        task2/Pair.hpp.
#        task2/PairOfOptionals.hpp

        task5/Source5.cpp
        task5/FixedLengthStack.hpp


        )
